--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,13 +2,20 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Pokémon App</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>PokeSearch</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Lista de Pokémon</h1>
-  <ul id="pokemon-list"></ul>
+  <h1>🔍 Buscar Pokémon</h1>
 
-  <script src="js/app.js"></script>
+  <div class="search-container">
+    <input type="text" id="pokemonName" placeholder="Escribe el nombre o número">
+    <button id="searchBtn">Buscar</button>
+  </div>
+
+  <div id="pokemon-card" class="pokemon-card hidden"></div>
+
+  <script src="script.js"></script>
 </body>
 </html>
